# board-game-tracker

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  DEPLOY.md  build.rs
.github/workflows/: ci.yml  release.yml
deploy/: board-game-tracker.service  install.sh  update.sh
migrations/: 0001_init.sql  0002_security_hardening.sql  0003_unique_game_names.sql  0004_update_statuses.sql  0005_display_names.sql  0006_settings.sql
src/: bgcatalog_import.rs  bgg.rs  data_export.rs  main.rs  models.rs  plays.rs  security.rs  settings.rs
src/handlers/: admin.rs  admin_bgg.rs  admin_console.rs  admin_import.rs  auth.rs  backups.rs  collection.rs  dashboard.rs  export.rs  games.rs  mod.rs  notifications.rs  photos.rs  plays.rs  settings.rs  stats.rs  sw.rs  system_maintenance.rs  system_update.rs  updates.rs  users.rs
static/: manifest.webmanifest  style.css  sw.js
templates/: admin_backups.html  admin_bgg.html  admin_console.html  admin_import_bgcatalog.html  admin_import_result.html  admin_merge_games.html  admin_new_user.html  admin_security.html  admin_system.html  admin_update.html  admin_updates.html  admin_users.html  change_password.html  collection.html  collection_add.html  collection_add_manual.html  collection_add_preview.html  dashboard.html  game_detail.html  games_list.html  login.html  notifications.html  play_detail.html  play_edit.html  play_new.html  plays.html  settings.html  setup_2fa.html  stats.html  stats_head_to_head.html  sw.js  user_profile.html  verify_2fa.html
templates/partials/: app_header.html  head.html
